@@ -4,3 +4,4 @@ pa-calculate	probanno
 pa-checkjob	probanno
 pa-getprobanno	probanno
 pa-getrxnprobs	probanno
+pa-url	probanno
