@@ -25,6 +25,10 @@ DESCRIPTION
       The --version optional argument specifies the version number of the
       RxnProbs object.  By default, the latest version is used.
 
+      The --sort optional argument specifies the field to use as a key for
+      sorting the output table.  Valid values are "rxnid" or "probability".  The
+      default is to sort using the reaction ID as the key.
+
       The --url optional argument specifies an alternate URL for the service
       endpoint.
 
@@ -51,6 +55,7 @@ if __name__ == "__main__":
     parser.add_argument('rxnprobs', help='ID of RxnProbs object', action='store', default=None)
     parser.add_argument('-w', '--workspace', help='workspace where RxnProbs object is saved', action='store', dest='rxnprobsws', default=None)
     parser.add_argument('-v', '--version', help='version number of RxnProbs object', action='store', dest='rxnprobsver', type=int, default=None)
+    parser.add_argument('--sort', help='field to use as key for sorting output table', action='store', dest='sortField', default='rxnid')
     parser.add_argument('-u', '--url', help='url for service', action='store', dest='url', default=None)
     parser.add_argument('-e', '--show-error', help='show detailed information for an exception', action='store_true', dest='showError', default=False)
     usage = parser.format_usage()
@@ -66,6 +71,7 @@ if __name__ == "__main__":
     else:
         input['rxnprobs_workspace'] = args.rxnprobsws
     input['rxnprobs_version'] = args.rxnprobsver
+    input['sort_field'] = args.sortField
                 
     # Create a probabilistic annotation client.
     if args.url is None:
